--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
-/transfer-objects/target/
-/target/
+# Identifies the subfolders and files to ignore from the 
+# Subfolders to ignore
+target/
+logs/
+wsdl/
+
+# Files to ignore 
+catalog.xml
+Thumbs.db
+thumbs.db
+*.pdf
+*.log
