Jasper reporting server integration has been implemented.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
@@ -2,6 +2,7 @@
 GENERAL_ERROR_LIST_HEADER = Form Submission was not successful. Please review and correct listed errors:
 GENERAL_UNEXPECTED_ERROR = Unexpected errors have occured while executing requested action
 GENERAL_REDIRECT_FAILED = Failed to redirect
+GENERAL_INSUFFICIENT_RIGHTS = You don't have rights to access this page
 
 # Login errors
 LOGIN_USERNAME_REQUIRED = Provide user name
@@ -113,3 +114,14 @@ FORMS_PAGE_SELECT_FIELD_CONSTRAINT_TYPE = - Select field constraint type
 FORMS_PAGE_FILL_FORM_NAME_AND_DISPLAY_NAME = Fill in form name and display name
 FORMS_PAGE_ADD_1_SECTION = Add at least 1 section
 FORMS_PAGE_ADD_1_FIELD = Add at least 1 field into section %s
+
+# Reports
+REPORTS_FAILED_AUTHENTICATE = Failed to authenticate. HTTP error code: %s
+REPORTS_FAILED_TO_GET_REPORTS = Failed to get list of reports. HTTP error code: %s
+REPORTS_FAILED_TO_GET_RESOURCE = Failed to get resource. HTTP error code: %s
+REPORTS_FAILED_TO_GET_REPORT = Failed to get report. HTTP error code: %s
+REPORTS_FAILED_TO_GET_PARAMS = Failed to get list of report parameters. HTTP error code: %s
+REPORTS_FILL_IN_PARAM = - Fill in "%s"
+REPORTS_PARAM_IS_NOT_DATE = Parameter "%s" is not a valid date
+REPORTS_PARAM_IS_NOT_NUMBER = Parameter "%s" is not a valid number
+REPORT_NOT_FOUND = Requested report was not found.
