Introducing enhancements from CS Uganda dealing with simple transactions (transfer of ownership and recording loans). Plus some refinements to the sample reports.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
@@ -1,6 +1,6 @@
 # General
 GENERAL_ERROR_LIST_HEADER = Form Submission was not successful. Please review and correct listed errors:
-GENERAL_UNEXPECTED_ERROR = Unexpected errors have occured while executing requested action
+GENERAL_UNEXPECTED_ERROR = Unexpected errors have occurred while executing requested action
 GENERAL_REDIRECT_FAILED = Failed to redirect
 GENERAL_INSUFFICIENT_RIGHTS = You don't have rights to access this page
 
@@ -59,6 +59,7 @@ CLAIM_CHALLENGED_CLAIM_NOT_FOUND = Challenged claim was not found
 CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED = Challenged claim can't be challenged. Check claim status
 CLAIM_OWNER_NAME_REQUIRED = Owner name is required
 CLAIM_CLAIMANT_NAME_REQUIRED = Claimant name is required
+CLAIM_NAME_REQUIRED = Name is required
 CLAIM_OWNER_TYPE_REQUIRED = Owner type is required
 CLAIM_CLAIMANT_TYPE_REQUIRED = Claimant type is required
 CLAIM_CLAIMANT_GENDER_REQUIERD = Gender is required
@@ -74,6 +75,8 @@ CLAIM_SHARE_PERCENTAGE_ZERO = Share percentage must be greater than 0
 CLAIM_REJECTION_REASON_REQUIRED = Rejection reason is required
 CLAIM_FAILED_TO_SUBMIT = Failed to submit claim
 CLAIM_NOT_FOUND = Claim not found
+CLAIM_TRANSFER_NOT_ALLOWED = Claim can't be transferred. Make sure you have sufficient rights and claim status is appropriate
+CLAIM_MANAGE_MORTGAGES_ALLOWED = Management of loans / mortgages is not allowed. Make sure you have sufficient rights and claim status is appropriate
 
 # Attachment
 ATTACHMENT_SELECT_DOOCUMENT_TYPE = Select document type
@@ -125,3 +128,19 @@ REPORTS_FILL_IN_PARAM = Fill in "%s"
 REPORTS_PARAM_IS_NOT_DATE = Parameter "%s" is not a valid date
 REPORTS_PARAM_IS_NOT_NUMBER = Parameter "%s" is not a valid number
 REPORT_NOT_FOUND = Requested report was not found.
+
+# Mortgages
+MORTGAGE_START_DATE = Enter start of payment date
+MORTGAGE_END_DATE = Enter end date
+MORTGAGE_AMOUNT = Enter amount
+MORTGAGE_INTEREST_RATE = Interest rate
+MORTGAGE_START_DATE_LESS_END_DATE = Start of payment date must be less than end date
+MORTGAGE_LENDERS = Add at least one lender
+
+# Claims split/merge
+CLAIM_ALREADY_IN_LIST = Claim was already added to the list
+CLAIM_MUST_BE_MODERATED = Selected claim must be with Moderated status
+CLAIM_HAS_RESTRICTIONS = Selected claim has registered restrictions. They must be terminated first.
+TRANSACTION_HAS_BEEN_COMPLETED = Transaction has been already completed.
+CLAIMS_MERGE_COUNT = For claims merge, there must be at least 2 claims to merge and 1 new claim as a result of merge.
+CLAIM_SPLIT_COUNT = For claims split, there must be 1 claim to split and at least 2 new claims as a result of split.
