New features introduced - boundary management, map search, boundary printing, public display printing

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
@@ -102,6 +102,7 @@ MAP_CONTROL_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Provide a description to 
 MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = Claim geometry must be provided
 MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = Claim geometry must be only one, not multiple
 MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Additional location description required
+MAP_CONTROL_BOUNDARY_GEOMETRY_MUST_BE_ONE = Boundary geometry must be only one, not multiple
 
 # Dynamic forms
 FORMS_PAGE_FORM_HAS_PAYLOAD = Form template cannot be deleted because it has related claim records.
@@ -144,3 +145,6 @@ CLAIM_HAS_RESTRICTIONS = Selected claim has registered restrictions. They must b
 TRANSACTION_HAS_BEEN_COMPLETED = Transaction has been already completed.
 CLAIMS_MERGE_COUNT = For claims merge, there must be at least 2 claims to merge and 1 new claim as a result of merge.
 CLAIM_SPLIT_COUNT = For claims split, there must be 1 claim to split and at least 2 new claims as a result of split.
+
+# Administrative boundaries
+BOUNDARY_EDIT_NOT_ALLOWED = Boundary can't be edited. Make sure you have sufficient rights and boundary status is appropriate.
