--- a/web/pom.xml
+++ b/web/pom.xml
@@ -51,7 +51,7 @@
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-mapper-asl</artifactId>
 		<version>1.9.13</version>
-                <scope>provided</scope>
+                <scope>compile</scope>
 	</dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -72,20 +72,20 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>2.7</version>
             <type>jar</type>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-xc</artifactId>
             <version>1.9.13</version>
             <type>jar</type>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.2.7</version>
-            <scope>provided</scope>
+            <version>2.3.9</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>net.lingala.zip4j</groupId>
@@ -97,7 +97,6 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${sola.services.group.id}</groupId>
