Introducing Import Polygon feature on the CS map control.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors.properties
@@ -107,6 +107,8 @@ MAP_CONTROL_CLAIM_GEOMETRY_REQUIERD = Claim geometry must be provided
 MAP_CONTROL_CLAIM_GEOMETRY_MUST_BE_ONE = Claim geometry must be only one, not multiple
 MAP_CONTROL_CLAIM_ADDITIONAL_LOCATION_DESCRIPTION_REQUIRED = Additional location description required
 MAP_CONTROL_BOUNDARY_GEOMETRY_MUST_BE_ONE = Boundary geometry must be only one, not multiple
+MAP_CONTROL_PARCEL_NOT_POLYGON = Provide polygon
+MAP_CONTROL_PARCEL_3POINT_MIN = Provide at least 3 points
 
 # Dynamic forms
 FORMS_PAGE_FORM_HAS_PAYLOAD = Form template cannot be deleted because it has related claim records.
